refactor: Art 도메인 ArtName 리팩토링